libs/extractor/src/snapshots/extractor__tests__global_css_at_rules-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {globalCss} from '@devup-ui/core'\nglobalCss({\n    body: {\n        bg: \"gray\",\n        \"@media\": {\n            \"(min-width: 768px)\": { bg: \"white\" },\n            \"(prefers-color-scheme: dark)\": { bg: \"black\" }\n        }\n    },\n    \".container\": {\n        \"@supports\": {\n            \"(display: grid)\": { display: \"grid\" }\n        }\n    }\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "black",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(prefers-color-scheme:dark)",
                        selector: Some(
                            "body",
                        ),
                        outer: [],
                        file: Some(
                            "test.tsx",
                        ),
                    },
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "gray",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "white",
                level: 0,
                selector: Some(
                    At {
                        kind: Media,
                        query: "(min-width:768px)",
                        selector: Some(
                            "body",
                        ),
                        outer: [],
                        file: Some(
                            "test.tsx",
                        ),
                    },
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "grid",
                level: 0,
                selector: Some(
                    At {
                        kind: Supports,
                        query: "(display:grid)",
                        selector: Some(
                            ".container",
                        ),
                        outer: [],
                        file: Some(
                            "test.tsx",
                        ),
                    },
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n;\n",
}
